--- a/frontend/src/components/ChatBox/ChatBox.css
+++ b/frontend/src/components/ChatBox/ChatBox.css
@@ -1,97 +1,97 @@
-.chat-box{
-height: 75vh;
-position: relative;
-background-color: white;
+.chat-box {
+  height: 75vh;
+  position: relative;
+  background-color: white;
 }
-.chat-user{
-padding: 10px 15px;
-display: flex;
-align-items: center;
-gap: 10px;
-border-bottom: solid #c6c6c6;
+.chat-user {
+  padding: 10px 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: solid #c6c6c6;
 }
-.chat-user img{
-    width: 25px;
-    border-radius: 50%;
+.chat-user img {
+  width: 25px;
+  border-radius: 50%;
 }
-.chat-user img:first-child{
-width: 38px;
-aspect-ratio: 1/1;
+.chat-user img:first-child {
+  width: 38px;
+  aspect-ratio: 1/1;
 }
-.chat-user p{
-    flex-wrap: 1;
-    font-weight: 500;
-    font-size: 20px;
-    color: #393939;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+.chat-user p {
+  flex-wrap: 1;
+  font-weight: 500;
+  font-size: 20px;
+  color: #393939;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-
-.chat-input{
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    padding: 10px 15px;
-    background: white;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.chat-input {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 10px 15px;
+  background: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
-.chat-input img{
-    width: 30px;
-    cursor: pointer;
+.chat-input img {
+  width: 30px;
+  cursor: pointer;
 }
-.chat-input label{
-    display: flex; 
+.chat-input label {
+  display: flex;
 }
-.chat-input label img{
-     width: 22px;   
+.chat-input label img {
+  width: 22px;
 }
-.chat-input input{
-    flex: 1;
-    border: none;
-    outline: none;
+.chat-input input {
+  flex: 1;
+  border: none;
+  outline: none;
 }
-.chat-msg
-{
-height: calc(100% - 70px);
-padding-bottom: 50px;
-overflow-y: scroll;
-display: flex;
-flex-direction: column-reverse;
+.chat-msg {
+  height: calc(100% - 70px);
+  padding-bottom: 50px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column-reverse;
 }
-.s-msg div img .r-img div img{
-    width: 27px;
-    aspect-ratio: 1/1;
-    border-radius: 50px;
+.s-msg div img .r-img div img {
+  width: 27px;
+  aspect-ratio: 1/1;
+  border-radius: 50px;
 }
-.s-msg,.r-msg{
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    gap: 5px;
-    padding: 0px 15px;
+.s-msg,
+.r-msg {
+  display: flex;
+  align-items: end;
+  justify-content: end;
+  gap: 5px;
+  padding: 0px 15px;
 }
-.r-msg{
-    flex-direction: row-reverse;
-    justify-self: start;
+.r-msg {
+  flex-direction: row-reverse;
+  justify-self: start;
 }
-.msg{
-    color: white;
-    background-color: #077eff;
-    padding: 8px;
-    max-width: 200px;
-    font-size: 11px;
-    font-weight: 300;
-    margin-bottom: 30px;
+.msg {
+  color: white;
+  background-color: #077eff;
+  padding: 8px;
+  max-width: 200px;
+  font-size: 11px;
+  font-weight: 300;
+  margin-bottom: 30px;
 }
-.r-msg .msg{
-      border-radius: 8px 8px 0px 8px;
+.r-msg .msg {
+  border-radius: 8px 8px 0px 8px;
 }
-.s-msg div, .r-msg div{
-    text-align: center;
-    font-size: 9px;
+.s-msg div,
+.r-msg div {
+  text-align: center;
+  font-size: 9px;
 }
