--- a/frontend/src/pages/Chat/Chat.css
+++ b/frontend/src/pages/Chat/Chat.css
@@ -1,15 +1,14 @@
-.chat{
-    min-height: 100vh;
-    background: linear-gradient(#596AFF ,#383699);
-    display: grid;
-    place-items: center;
+.chat {
+  min-height: 100vh;
+  background: linear-gradient(#596aff, #383699);
+  display: grid;
+  place-items: center;
 }
-.chat-container{
-    width: 95%;
-    height: 75vh;
-    max-width: 1000px;
-    background-color: rgb(227, 237, 245);
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    
+.chat-container {
+  width: 95%;
+  height: 75vh;
+  max-width: 1000px;
+  background-color: rgb(227, 237, 245);
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
 }
